Fixed github buttons margin and alignment

--- a/docs/base-package/site/app/routes/home/home.component.scss
+++ b/docs/base-package/site/app/routes/home/home.component.scss
@@ -10,3 +10,16 @@
 
   }
 }
+
+.repo-button {
+  display: inline-block;
+  margin: 0 5px;
+
+  &:first-of-type {
+    margin: 0 5px 0 0;
+  }
+
+  &:last-of-type {
+    margin: 0 0 0 5px;
+  }
+}
